--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 cymysql==0.9.4
 dj-database-url==0.4.2
-Django==1.11.15
+django>=1.11.18
 django-cymysql==2.0.0
 django-datatable==0.3.1
 django-filter==1.1.0
